src/generated/MonkeyParser.java
// Generated from C:/Users/Jurguen/Desktop/Proyectos 2018/Segundo proyecto lenguaje/Primerproyecto programado Jurguen Romero Andres Fernandez/monkey_compiler-master/monkey_compiler-master/Interfaz compiladores\MonkeyParser.g4 by ANTLR 4.7
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MonkeyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET=1, RETURN=2, TRUE=3, FALSE=4, LEN=5, FIRST=6, LAST=7, REST=8, PUSH=9, 
		FN=10, PUTS=11, IF=12, ELSE=13, L=14, P=15, LE=16, PE=17, EE=18, SUM=19, 
		SUB=20, MUL=21, DIV=22, EQUAL=23, PCOMA=24, PCI=25, PCD=26, PRI=27, PRD=28, 
		DCOM=29, COMA=30, LI=31, LD=32, DPTS=33, ID=34, INTEGER=35, STRING=36, 
		BOOLEAN=37, WS=38, LINE_COMMENT=39, SPECIAL_COMMENT=40;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_letStatement = 2, RULE_returnStatement = 3, 
		RULE_expressionStatement = 4, RULE_expression = 5, RULE_comparison = 6, 
		RULE_additionExpression = 7, RULE_additionFactor = 8, RULE_multiplicationExpression = 9, 
		RULE_multiplicationFactor = 10, RULE_elementExpression = 11, RULE_elementAccess = 12, 
		RULE_callExpression = 13, RULE_primitiveExpression = 14, RULE_arrayFunctions = 15, 
		RULE_arrayLiteral = 16, RULE_functionLiteral = 17, RULE_functionParameters = 18, 
		RULE_moreIdentifiers = 19, RULE_hashLiteral = 20, RULE_hashContent = 21, 
		RULE_moreHashContent = 22, RULE_expressionList = 23, RULE_moreExpressions = 24, 
		RULE_printExpression = 25, RULE_ifExpression = 26, RULE_blockStatement = 27;
	public static final String[] ruleNames = {
		"program", "statement", "letStatement", "returnStatement", "expressionStatement", 
		"expression", "comparison", "additionExpression", "additionFactor", "multiplicationExpression", 
		"multiplicationFactor", "elementExpression", "elementAccess", "callExpression", 
		"primitiveExpression", "arrayFunctions", "arrayLiteral", "functionLiteral", 
		"functionParameters", "moreIdentifiers", "hashLiteral", "hashContent", 
		"moreHashContent", "expressionList", "moreExpressions", "printExpression", 
		"ifExpression", "blockStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'let'", "'return'", "'true'", "'false'", "'len'", "'first'", "'last'", 
		"'rest'", "'push'", "'fn'", "'puts'", "'if'", "'else'", "'<'", "'>'", 
		"'<='", "'>='", "'=='", "'+'", "'-'", "'*'", "'/'", "'='", "';'", "'['", 
		"']'", "'('", "')'", "'\"'", "','", "'{'", "'}'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LET", "RETURN", "TRUE", "FALSE", "LEN", "FIRST", "LAST", "REST", 
		"PUSH", "FN", "PUTS", "IF", "ELSE", "L", "P", "LE", "PE", "EE", "SUM", 
		"SUB", "MUL", "DIV", "EQUAL", "PCOMA", "PCI", "PCD", "PRI", "PRD", "DCOM", 
		"COMA", "LI", "LD", "DPTS", "ID", "INTEGER", "STRING", "BOOLEAN", "WS", 
		"LINE_COMMENT", "SPECIAL_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MonkeyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MonkeyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Program_monkeyContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Program_monkeyContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitProgram_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new Program_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << RETURN) | (1L << TRUE) | (1L << FALSE) | (1L << LEN) | (1L << FIRST) | (1L << LAST) | (1L << REST) | (1L << PUSH) | (1L << FN) | (1L << PUTS) | (1L << IF) | (1L << PCI) | (1L << PRI) | (1L << LI) | (1L << ID) | (1L << INTEGER) | (1L << STRING))) != 0)) {
				{
				{
				setState(56);
				statement();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Statement_expressionStatement_monkeyContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public Statement_expressionStatement_monkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitStatement_expressionStatement_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Statement_let_monkeyContext extends StatementContext {
		public TerminalNode LET() { return getToken(MonkeyParser.LET, 0); }
		public LetStatementContext letStatement() {
			return getRuleContext(LetStatementContext.class,0);
		}
		public Statement_let_monkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitStatement_let_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Statement_return_monkeyContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(MonkeyParser.RETURN, 0); }
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public Statement_return_monkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitStatement_return_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				_localctx = new Statement_let_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(LET);
				setState(63);
				letStatement();
				}
				break;
			case RETURN:
				_localctx = new Statement_return_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(RETURN);
				setState(65);
				returnStatement();
				}
				break;
			case TRUE:
			case FALSE:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case PCI:
			case PRI:
			case LI:
			case ID:
			case INTEGER:
			case STRING:
				_localctx = new Statement_expressionStatement_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				expressionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetStatementContext extends ParserRuleContext {
		public LetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letStatement; }
	 
		public LetStatementContext() { }
		public void copyFrom(LetStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LetStatement_monkeyContext extends LetStatementContext {
		public TerminalNode ID() { return getToken(MonkeyParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(MonkeyParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PCOMA() { return getToken(MonkeyParser.PCOMA, 0); }
		public LetStatement_monkeyContext(LetStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitLetStatement_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetStatementContext letStatement() throws RecognitionException {
		LetStatementContext _localctx = new LetStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_letStatement);
		try {
			_localctx = new LetStatement_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(ID);
			setState(70);
			match(EQUAL);
			setState(71);
			expression();
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PCOMA:
				{
				setState(72);
				match(PCOMA);
				}
				break;
			case EOF:
			case LET:
			case RETURN:
			case TRUE:
			case FALSE:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case PCI:
			case PRI:
			case LI:
			case LD:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnStatement_monkeyContext extends ReturnStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PCOMA() { return getToken(MonkeyParser.PCOMA, 0); }
		public ReturnStatement_monkeyContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitReturnStatement_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnStatement);
		try {
			_localctx = new ReturnStatement_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			expression();
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PCOMA:
				{
				setState(77);
				match(PCOMA);
				}
				break;
			case EOF:
			case LET:
			case RETURN:
			case TRUE:
			case FALSE:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case PCI:
			case PRI:
			case LI:
			case LD:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
	 
		public ExpressionStatementContext() { }
		public void copyFrom(ExpressionStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExpressionStatement_monkeyContext extends ExpressionStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PCOMA() { return getToken(MonkeyParser.PCOMA, 0); }
		public ExpressionStatement_monkeyContext(ExpressionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitExpressionStatement_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressionStatement);
		try {
			_localctx = new ExpressionStatement_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			expression();
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PCOMA:
				{
				setState(82);
				match(PCOMA);
				}
				break;
			case EOF:
			case LET:
			case RETURN:
			case TRUE:
			case FALSE:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case PCI:
			case PRI:
			case LI:
			case LD:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expression_monkeyContext extends ExpressionContext {
		public AdditionExpressionContext additionExpression() {
			return getRuleContext(AdditionExpressionContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public Expression_monkeyContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitExpression_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			_localctx = new Expression_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			additionExpression();
			setState(87);
			comparison();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
	 
		public ComparisonContext() { }
		public void copyFrom(ComparisonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ComparisonPlusEqual_monkeyContext extends ComparisonContext {
		public List<TerminalNode> PE() { return getTokens(MonkeyParser.PE); }
		public TerminalNode PE(int i) {
			return getToken(MonkeyParser.PE, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public ComparisonPlusEqual_monkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitComparisonPlusEqual_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonPlus_monkeyContext extends ComparisonContext {
		public List<TerminalNode> P() { return getTokens(MonkeyParser.P); }
		public TerminalNode P(int i) {
			return getToken(MonkeyParser.P, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public ComparisonPlus_monkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitComparisonPlus_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonEqualEqual_monkeyContext extends ComparisonContext {
		public List<TerminalNode> EE() { return getTokens(MonkeyParser.EE); }
		public TerminalNode EE(int i) {
			return getToken(MonkeyParser.EE, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public ComparisonEqualEqual_monkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitComparisonEqualEqual_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonLess_monkeyContext extends ComparisonContext {
		public List<TerminalNode> L() { return getTokens(MonkeyParser.L); }
		public TerminalNode L(int i) {
			return getToken(MonkeyParser.L, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public ComparisonLess_monkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitComparisonLess_monkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonLessEqual_monkeyContext extends ComparisonContext {
		public List<TerminalNode> LE() { return getTokens(MonkeyParser.LE); }
		public TerminalNode LE(int i) {
			return getToken(MonkeyParser.LE, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public ComparisonLessEqual_monkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitComparisonLessEqual_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparison);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new ComparisonLess_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==L) {
					{
					{
					setState(89);
					match(L);
					setState(90);
					additionExpression();
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new ComparisonPlus_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==P) {
					{
					{
					setState(96);
					match(P);
					setState(97);
					additionExpression();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				_localctx = new ComparisonLessEqual_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LE) {
					{
					{
					setState(103);
					match(LE);
					setState(104);
					additionExpression();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				_localctx = new ComparisonPlusEqual_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PE) {
					{
					{
					setState(110);
					match(PE);
					setState(111);
					additionExpression();
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				_localctx = new ComparisonEqualEqual_monkeyContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==EE) {
					{
					{
					setState(117);
					match(EE);
					setState(118);
					additionExpression();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionExpressionContext extends ParserRuleContext {
		public AdditionExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additionExpression; }
	 
		public AdditionExpressionContext() { }
		public void copyFrom(AdditionExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AdittionExpression_monkeyContext extends AdditionExpressionContext {
		public MultiplicationExpressionContext multiplicationExpression() {
			return getRuleContext(MultiplicationExpressionContext.class,0);
		}
		public AdditionFactorContext additionFactor() {
			return getRuleContext(AdditionFactorContext.class,0);
		}
		public AdittionExpression_monkeyContext(AdditionExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitAdittionExpression_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditionExpressionContext additionExpression() throws RecognitionException {
		AdditionExpressionContext _localctx = new AdditionExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_additionExpression);
		try {
			_localctx = new AdittionExpression_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			multiplicationExpression();
			setState(127);
			additionFactor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionFactorContext extends ParserRuleContext {
		public AdditionFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additionFactor; }
	 
		public AdditionFactorContext() { }
		public void copyFrom(AdditionFactorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AdittionFactorSUMARESTA_monkeyContext extends AdditionFactorContext {
		public List<MultiplicationExpressionContext> multiplicationExpression() {
			return getRuleContexts(MultiplicationExpressionContext.class);
		}
		public MultiplicationExpressionContext multiplicationExpression(int i) {
			return getRuleContext(MultiplicationExpressionContext.class,i);
		}
		public List<TerminalNode> SUM() { return getTokens(MonkeyParser.SUM); }
		public TerminalNode SUM(int i) {
			return getToken(MonkeyParser.SUM, i);
		}
		public List<TerminalNode> SUB() { return getTokens(MonkeyParser.SUB); }
		public TerminalNode SUB(int i) {
			return getToken(MonkeyParser.SUB, i);
		}
		public AdittionFactorSUMARESTA_monkeyContext(AdditionFactorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitAdittionFactorSUMARESTA_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditionFactorContext additionFactor() throws RecognitionException {
		AdditionFactorContext _localctx = new AdditionFactorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_additionFactor);
		int _la;
		try {
			_localctx = new AdittionFactorSUMARESTA_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUM || _la==SUB) {
				{
				{
				setState(129);
				_la = _input.LA(1);
				if ( !(_la==SUM || _la==SUB) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(130);
				multiplicationExpression();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplicationExpressionContext extends ParserRuleContext {
		public MultiplicationExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicationExpression; }
	 
		public MultiplicationExpressionContext() { }
		public void copyFrom(MultiplicationExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiplicationExpression_monkeyContext extends MultiplicationExpressionContext {
		public ElementExpressionContext elementExpression() {
			return getRuleContext(ElementExpressionContext.class,0);
		}
		public MultiplicationFactorContext multiplicationFactor() {
			return getRuleContext(MultiplicationFactorContext.class,0);
		}
		public MultiplicationExpression_monkeyContext(MultiplicationExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MonkeyParserVisitor ) return ((MonkeyParserVisitor<? extends T>)visitor).visitMultiplicationExpression_monkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicationExpressionContext multiplicationExpression() throws RecognitionException {
		MultiplicationExpressionContext _localctx = new MultiplicationExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multiplicationExpression);
		try {
			_localctx = new MultiplicationExpression_monkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
